<resources>
    <string name="app_name">Order Tablet</string>
    <string name="btn_menu">Menú</string>
    <string name="btn_seleccionar_mesa">Mesa</string>
    <string name="btn_welcome">Bienvenidos</string>
    <string name="btn_config_categoria">Categorías</string>
    <string name="btnLogout">Cerrar Sesión</string>


    <string name="menu_title">Entradas:</string>
    <string name="menu_food">Entrada 1 ........ $1235</string>
    <string name="menu_food_detail">(pan integral, tomates, albahaca, aceite oliva, finas hierbas)</string>

    <string name="menu_title_platos">Platos Principales</string>
    <string name="menu_title_bebidas">Bebidas</string>
    <string name="menu_platos">Plato 1 ........ $1235</string>
    <string name="add_btn">Añadir</string>
    <string name="subs_btn">Eliminar</string>
    <string name="cuantity">Cantidad</string>

    <string name="waiter_msj">"Nos acercaremos a la brevedad "</string>

    <string name="demorapedido">Su pedido demorará aproximadamente:</string>
    <string name="tiempopedido">40 minutos</string>


    <string name="txt_recepcionPedido">Recibimos su pedido con éxito!</string>


    <string name="btn_orderconfirm">Confirmar Pedido</string>
    <string name="btnalt">Btn back</string>
    <string name="btn_specialOrder" />
    <string name="btn_SpecialOrder">Pedidos especiales</string>
    <string name="Preferencias">Preferencias sobre algún plato en particular</string>

    <string name="btn_confirmapedido">Confirmar Pedido</string>
    <string name="specialorders_msj">Deje aqui su comentario:</string>
    <string name="comment_msj">La comida y el servicio excelentes..."</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">"Bienvenido"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_button_text">Login</string>
    <string name="btn_alt">btnback</string>
    <string name="userInput">Ingrese su email</string>
    <string name="newUser">Crear usuario</string>
    <string name="passwordInput">Ingrese su contraseña</string>
    <string name="newPassword">Crear contraseña</string>
    <string name="cbRemember">Recuerdame</string>
    <string name="recoveryPassword">Recuperar contraseña</string>
    <string name="register">Registro</string>
    <string name="newAccount">Crear nueva cuenta</string>
    <string name="userExist">¿Ya tiene una cuenta? Inicie sesión</string>
    <string name="newUserRegister">¿No tienes una cuenta? <a href="https://www.example.com/register">Regístrate aquí</a></string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="ayuda">Ayuda</string>
    <string name="password_hint">Password</string>
    <string name="email">Email</string>
    <string name="imagen_persona">imagen_persona</string>
    <string name="background_img">Descripción de la imagen de fondo</string>

    <string name="cantidad01">1</string>
    <string name="cantidad02">2</string>
    <string name="cantidad03">3</string>
    <string name="cantidad04">4</string>
    <string name="cantidad05">5</string>
    <string name="cantidad06">6</string>
    <string name="cantidad07">7</string>
    <string name="btn_demora">Demora aproximada</string>
    <string name="paymentmethod">Métodos de pago</string>
    <string name="estimatedtime">demora aproximada</string>
    <string name="btn_verpedido">Ver Pedido</string>
    <string name="btn_enviar">Enviar</string>
    <string name="welcomeUser">Bienvenida Usuario</string>
    <string name="Menu">Menu\n</string>
    <string name="btn_backselection2">Volver a la selección 2</string>
    <string name="btn_estimatedtime">Demora aproximada</string>
    <string name="txt_pedidorecibido">Recibimos su pedido con éxito</string>
    <string name="btn_waiter">Llamar al mozo</string>
    <string name="btn_waiter2">Llamar al mozo</string>
    <string name="btn_comentario">Dejanos tu comentario</string>
    <string name="txt_comentario">Cuadro para dejar una reseña sobre el lugar</string>
    <string name="txt_greeting">Te esperamos pronto\n</string>
    <string name="crudProducts">Actualizar Menu</string>
    <string name="btn_order">Mi Pedido</string>

    <!--Actualizar crud y categoria-->
    <string name="new_products">Alta de Productos</string>
    <string name="name_product">Nombre del Producto</string>
    <string name="price_product">Precio del Producto</string>
    <string name="description_product">Descripción del Producto</string>
    <string name="btn_save">Guardar</string>
    <string name="btn_update">Actualizar</string>
    <string name="btn_delete">Eliminar</string>
    <string name="check_products">Consulta de Productos</string>
    <string name="new_category">Alta de Categoria</string>
    <string name="name_category">Nombre de la categoria</string>

    <string name="check_categorias">Consulta de Categorias</string>

</resources>