<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkgd_welcome"
    tools:context=".menu.MenuActivity"
    tools:visibility="visible">

    <!-- Botón 1 (izquierda) -->

    <!-- Botón 2 (derecha) -->

    <!-- Botón 3 (izquierda) -->

    <!-- Botón 4 (derecha) -->

    <!-- TextView para indicar la mesa seleccionada -->

    <Button
        android:id="@+id/btn_config_categoria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/roundedstyle"
        android:backgroundTint="#2F2B2B"
        android:fontFamily="@font/roboto"
        android:text="@string/btn_config_categoria"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_seleccionar_mesa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_actualizar_menu"
        app:strokeColor="#050505"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/btn_actualizar_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="180dp"
        android:background="@drawable/roundedstyle"
        android:backgroundTint="#2F2B2B"
        android:fontFamily="@font/roboto"
        android:text="@string/crudProducts"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_bienvenida"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#2F2B2B"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/btn_bienvenida"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="180dp"
        android:background="@drawable/roundedstyle"
        android:backgroundTint="#2F2B2B"
        android:fontFamily="@font/roboto"
        android:text="@string/welcomeUser"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_actualizar_menu"
        app:strokeColor="#050505"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/btn_seleccionar_mesa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/roundedstyle"
        android:backgroundTint="#2F2B2B"
        android:fontFamily="@font/roboto"
        android:text="@string/btn_seleccionar_mesa"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_config_categoria"
        app:layout_constraintTop_toBottomOf="@+id/btn_bienvenida"
        app:layout_constraintVertical_bias="0.489"
        app:strokeColor="#050505"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/txtMesaSeleccionada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textColor="#FAF6F6"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btn_seleccionar_mesa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444"
        tools:visibility="invisible" />
</androidx.constraintlayout.widget.ConstraintLayout>
